# StockSchool

./: .env  .env.acceptance  .env.prod.example  .gitignore  .pylintrc  0.md  1.0蓝图.md  1.0蓝图重构.md  1.17综合优化建议.md  1.1质检.md  1.md  CLAUDE.md  DATA_SYNC_README.md  Dockerfile  Dockerfile.api  Dockerfile.datasync  Dockerfile.monitoring  Dockerfile.stage2  KnowledgeGraphMemory.jsonl  README.md  README_STAGE3.md  S.md  STAGE2_OPTIMIZATION_GUIDE.md  StockSchool_完整程序构建指南.md  StockSchool_完整程序构建指南.md.append  Z.md  agent_steering_reorganization_summary.md  alerts.db  celerybeat-schedule.dir  cleanup_report.md  code_cleanup_report.md  config.yml  config_migration_report.md  database_schema.sql  demo_config_system.py  demo_data_sync.py  deployment_acceptance_summary.md  docker-compose.acceptance.yml  docker-compose.enhanced.yml  docker-compose.prod.yml  (+56 more)
.claude/agents/: number-sequence-analyzer.md
.claude/commands/: hooks-expert.md
.github/workflows/: ci_pipeline.yml
.kiro/hooks/: auto-translation-hook.kiro.hook  code-quality-analyzer.kiro.hook  docs-sync-hook.kiro.hook
.kiro/specs/: 1comprehensive_review.md  2refactoring_plan.md  project-status-summary.md
.kiro/steering/: Xu.md  api-design-guidelines.md  coding-standards.md  database-guidelines.md  deployment-operations.md  project-overview.md  testing-standards.md
.lingma/rules/: KnowledgeGraph.md  MCP.md  MCP_KGM.md  Sequential-Think.md  Time.md  Xu.md  context7.md
.vercel/: project.json
config/: base.yml  development.yml  env_template.env  factor_config.yaml  monitoring.yaml  monitoring_example.yaml  performance_test_config.yml  production.yml  stage2_optimization_config.yml  stage3_config.py  testing.yml
database_updates/: akshare_tables.sql  api_support_tables.sql  data_quality_tables.sql  factor_engine_tables.sql
docs/: CONFIG_SYSTEM_IMPLEMENTATION.md  DATA_SYNC_README.md  DEPLOYMENT_SUMMARY.md  SYNC_MONITOR_IMPLEMENTATION.md  api_documentation.md  api_usage_examples.md  build_docs.py  configuration_guide.md  data_quality_monitoring.md  data_sync_refactoring.md  deployment_guide.md  factor_calculation_engine_review.md  factor_calculation_technical_guide.md  factor_usage_best_practices.md  index.md  monitoring_system.md  operations_manual.md  troubleshooting_guide.md  user_manual.md
docs/adr/: 001-choice-of-ml-model.md
examples/: sync_monitor_usage.py
frontend/: auto-imports.d.ts  components.d.ts  index.html  vite.config.ts
old/: 1.0指令.md  1.0蓝图.md  1.0质检.md  1.15指令.md  1.16指令.md  1.16调试.md  1.17综合优化建议.md  1.1指令.md
performance_reports/: performance_report_20250728_022607.md
reports/: acceptance_report_215483b4-f8eb-4c04-9f07-a82bca73f592.html  acceptance_report_215483b4-f8eb-4c04-9f07-a82bca73f592.md  acceptance_report_299afe34-79e3-45e5-9cd2-27c1de058c95.html  acceptance_report_299afe34-79e3-45e5-9cd2-27c1de058c95.md  acceptance_report_8af6ea71-5222-4b37-a13a-e0540601e93c.html  acceptance_report_8af6ea71-5222-4b37-a13a-e0540601e93c.md  acceptance_report_c585c930-6263-4f84-9280-55ca320ecca0.html  acceptance_report_c585c930-6263-4f84-9280-55ca320ecca0.md  cleanup_report.txt  code_deduplication_report.txt  code_formatting_report.md  quality_check_report.md
scripts/: check_docker_services.py  cleanup_project.py  cleanup_temp_files.py  clear_database.py  code_deduplication_checker.py  config_manager.py  fix_indentation.py  format_code.py  full_test_v1_1_6.py  migrate_config_system.py  performance_test_runner.py  quality_check.py  run_acceptance_tests.py  stage2_deploy.py  start_monitoring.py  test_full_pipeline.py  test_network_connectivity.py  verify_python_env.py
src/: check_stocks.py  main.py
templates/: monitoring.html
test/: check_calendar.py  fix_data_sync.py  test_alerts.py  test_database.py  test_integration_pipeline.py  test_run_operations.py  test_sw_industry_sync.py  test_tushare_sync.py
test_data/: Dockerfile.data-generator  generate_test_data.py  init.sql  redis.conf  sample_data.sql
tests/: check_calendar.py  check_data.py  check_database_status.py  conftest.py  fix_data_sync.py  performance_benchmarks.py  test_ai_model.py  test_ai_model_component.py  test_ai_model_visualization.py  test_alert_simple.py  test_alerts.py  test_basic_structure.py  test_collectors_simple.py  test_config.py  test_config_system.py  test_data_sync_component.py  test_docker_deployment.py  test_explainer_api.py  test_export_functionality.py  test_export_service.py  test_extended_collectors.py  test_factor_compute_component.py  test_factor_compute_integration.py  test_frontend_structure.py  test_fundamental_factor_engine.py  test_main_complete_integration.py  test_main_integration.py  test_main_structure.py  test_model_explainer.py  test_monitoring.py  test_monitoring_api.py  test_monitoring_service_simple.py  test_phase2_performance.py  test_rate_limit.py  test_run_operations.py  test_schemas_simple.py  test_service_basic.py  test_sw_industry_sync.py  test_system_health_component.py  test_websocket_monitoring.py
(+423 files in other folders)
